// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`google > google-vertex/default > llm 1`] = `
"data: {"candidates": [{"content": {"role": "model","parts": [{"functionCall": {"name": "final_result","args": {"name": "Samuel","city": "London","dob": "1987-01-28"}},"thoughtSignature": "CswDAePx/15lDrSIcIjN85FpyyOl3oASu2R23QD4Z3cj5XRUKOD/3/mMqcHv5AeXc/L+P1eVNpq5C3xM9/8zil6gOOZI91F/r1kmKvxmCECD1SW+p1dtzG6eljHd51vd2Gx7eqtEek1ORzeLP4zSWY2GDlZA9fZIs/uIfhLyOlkiiB1P/GAAUmBPT/TZqdOpQZXBt8MAUrbTOQfbhQ1qbxdrYRveZRMzXS898K6NmjrN5quNiaUgwEbc2J6NAoDOl5jdK8tIt7m25qdpjSYMpAGYD0c0Le2yPf8eO6A9J6zYp1lqVCTifby4/nP5RkVM2e1L4pH6oYisgQsyDUSEDCSG2GXhGO9WU5wFYwkjlhB8ghLU92kVgr/Rq54K/0GaYGBgzKi+YrD8c6QKSTZWTw/46D8lQ1goL1Y1YdtRiRGNFRJqKmSbkxjIOQoIk4glxcsm7L2lucL4miz4yZioBe7HEPDtmQY0FEKM5DQhwuj+AF1bBl5WE/9NYUsuGY3DxSi0lVd2v8+zd0op9U8z3PX4cmdKVkf/kA9TuQSPXBZpYgj7CssoMBT4ssLVoUgetOrNvJL99liSvsPOBZaLDKpNTXQA9GdZvQltoSolOg=="}]},"finishReason": "STOP","avgLogprobs": -0.48033348719278973}],"usageMetadata": {"promptTokenCount": 79,"candidatesTokenCount": 18,"totalTokenCount": 240,"trafficType": "ON_DEMAND","promptTokensDetails": [{"modality": "TEXT","tokenCount": 79}],"candidatesTokensDetails": [{"modality": "TEXT","tokenCount": 18}],"thoughtsTokenCount": 143},"modelVersion": "gemini-2.5-flash","createTime": "2025-11-04T15:31:56.289691Z","responseId": "bBwKaZvXEemDn9kP56mN8QI"}

"
`;

exports[`google > google-vertex/default > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.response.model": "gemini-2.5-flash",
      "gen_ai.system": "google-vertex",
      "gen_ai.usage.input_tokens": 79,
      "gen_ai.usage.output_tokens": 161,
      "http.request.header.accept": "*/*",
      "http.request.header.accept-encoding": "deflate",
      "http.request.header.authorization": "healthy",
      "http.request.header.content-length": "830",
      "http.request.header.content-type": "application/json",
      "http.request.header.traceparent": "00-019a4effa21047ac31372f093cb8e712-8b60768281864a49-01",
      "http.request.header.user-agent": "pydantic-ai/1.0.19.dev5+b3b34f9, google-genai-sdk/1.36.0 gl-python/3.13.0 via Pydantic AI Gateway unknown, contact engineering@pydantic.dev",
      "http.request.header.x-goog-api-client": "google-genai-sdk/1.36.0 gl-python/3.13.0",
      "http.request.header.x-goog-api-key": "unset",
      "http.request.method": "POST",
      "http.response.header.content-type": "text/event-stream",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.accept":{"type":"string"},"http.request.header.accept-encoding":{"type":"string"},"http.request.header.authorization":{"type":"string"},"http.request.header.content-length":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.traceparent":{"type":"string"},"http.request.header.user-agent":{"type":"string"},"http.request.header.x-goog-api-client":{"type":"string"},"http.request.header.x-goog-api-key":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat streaming",
      "url.full": "https://example.com/gemini/v1beta1/projects/pydantic-ai/locations/global/publishers/google/models/gemini-2.5-flash:generateContent?alt=sse",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat streaming",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;

exports[`google > google-vertex/stream > chunks 1`] = `
[
  Uint8Array [
    100,
    97,
    116,
    97,
    58,
    32,
    123,
    34,
    99,
    97,
    110,
    100,
    105,
    100,
    97,
    116,
    101,
    115,
    34,
    58,
    32,
    91,
    123,
    34,
    99,
    111,
    110,
    116,
    101,
    110,
    116,
    34,
    58,
    32,
    123,
    34,
    114,
    111,
    108,
    101,
    34,
    58,
    32,
    34,
    109,
    111,
    100,
    101,
    108,
    34,
    44,
    34,
    112,
    97,
    114,
    116,
    115,
    34,
    58,
    32,
    91,
    123,
    34,
    102,
    117,
    110,
    99,
    116,
    105,
    111,
    110,
    67,
    97,
    108,
    108,
    34,
    58,
    32,
    123,
    34,
    110,
    97,
    109,
    101,
    34,
    58,
    32,
    34,
    102,
    105,
    110,
    97,
    108,
    95,
    114,
    101,
    115,
    117,
    108,
    116,
    34,
    44,
    34,
    97,
    114,
    103,
    115,
    34,
    58,
    32,
    123,
    34,
    110,
    97,
    109,
    101,
    34,
    58,
    32,
    34,
    83,
    97,
    109,
    117,
    101,
    108,
    34,
    44,
    34,
    100,
    111,
    98,
    34,
    58,
    32,
    34,
    49,
    57,
    56,
    55,
    45,
    48,
    49,
    45,
    50,
    56,
    34,
    44,
    34,
    99,
    105,
    116,
    121,
    34,
    58,
    32,
    34,
    76,
    111,
    110,
    100,
    111,
    110,
    34,
    125,
    125,
    44,
    34,
    116,
    104,
    111,
    117,
    103,
    104,
    116,
    83,
    105,
    103,
    110,
    97,
    116,
    117,
    114,
    101,
    34,
    58,
    32,
    34,
    67,
    105,
    119,
    66,
    52,
    47,
    72,
    47,
    88,
    114,
    70,
    72,
    99,
    113,
    74,
    53,
    112,
    119,
    73,
    69,
    77,
    81,
    110,
    66,
    104,
    81,
    66,
    72,
    97,
    122,
    89,
    109,
    85,
    98,
    55,
    88,
    67,
    49,
    99,
    90,
    104,
    76,
    54,
    56,
    109,
    120,
    65,
    83,
    73,
    73,
    98,
    109,
    87,
    121,
    70,
    106,
    117,
    122,
    88,
    120,
    97,
    119,
    113,
    65,
    65,
    81,
    72,
    106,
    56,
    102,
    57,
    101,
    112,
    88,
    120,
    86,
    106,
    67,
    68,
    121,
    48,
    47,
    111,
    71,
    78,
    88,
    78,
    49,
    76,
    70,
    121,
    79,
    116,
    100,
    65,
    97,
    113,
    80,
    106,
    115,
    121,
    99,
    77,
    53,
    66,
    120,
    67,
    89,
    65,
    80,
    69,
    119,
    108,
    71,
    107,
    105,
    84,
    77,
    86,
    85,
    116,
    74,
    97,
    71,
    110,
    90,
    79,
    90,
    86,
    106,
    77,
    67,
    65,
    49,
    69,
    55,
    106,
    106,
    119,
    106,
    121,
    97,
    85,
    110,
    76,
    105,
    48,
    74,
    88,
    85,
    110,
    47,
    107,
    72,
    72,
    112,
    78,
    90,
    73,
    75,
    72,
    72,
    70,
    122,
    50,
    54,
    85,
    111,
    53,
    79,
    85,
    78,
    89,
    116,
    56,
    67,
    97,
    110,
    88,
    69,
    115,
    98,
    102,
    76,
    89,
    54,
    105,
    43,
    53,
    119,
    73,
    77,
    118,
    76,
    89,
    85,
    82,
    83,
    120,
    66,
    101,
    87,
    113,
    56,
    49,
    52,
    117,
    69,
    119,
    86,
    43,
    83,
    105,
    102,
    54,
    122,
    51,
    55,
    87,
    102,
    97,
    78,
    118,
    85,
    53,
    75,
    114,
    82,
    57,
    101,
    107,
    52,
    49,
    114,
    67,
    82,
    67,
    109,
    107,
    66,
    52,
    47,
    72,
    47,
    88,
    108,
    104,
    82,
    49,
    72,
    107,
    72,
    103,
    109,
    75,
    71,
    107,
    78,
    90,
    110,
    67,
    98,
    122,
    76,
    52,
    97,
    76,
    89,
    86,
    110,
    110,
    65,
    51,
    57,
    112,
    53,
    89,
    70,
    97,
    90,
    118,
    115,
    79,
    118,
    118,
    56,
    79,
    84,
    119,
    101,
    100,
    47,
    97,
    114,
    70,
    99,
    86,
    82,
    69,
    86,
    101,
    103,
    84,
    57,
    106,
    73,
    117,
    115,
    67,
    43,
    66,
    72,
    98,
    120,
    81,
    76,
    54,
    106,
    120,
    65,
    105,
    47,
    114,
    43,
    55,
    89,
    120,
    111,
    52,
    68,
    54,
    76,
    70,
    107,
    104,
    54,
    56,
    106,
    47,
    100,
    98,
    71,
    122,
    47,
    89,
    49,
    107,
    86,
    121,
    43,
    100,
    119,
    113,
    114,
    81,
    72,
    74,
    52,
    43,
    99,
    57,
    85,
    117,
    80,
    79,
    90,
    110,
    77,
    75,
    122,
    116,
    115,
    43,
    101,
    73,
    105,
    112,
    54,
    103,
    75,
    101,
    119,
    72,
    106,
    56,
    102,
    57,
    101,
    68,
    65,
    100,
    67,
    66,
    49,
    65,
    99,
    103,
    97,
    88,
    99,
    101,
    81,
    84,
    99,
    116,
    113,
    113,
    48,
    80,
    101,
    121,
    99,
    98,
    72,
    105,
    115,
    83,
    113,
    76,
    75,
    113,
    98,
    48,
    98,
    107,
    116,
    84,
    117,
    100,
    53,
    83,
    49,
    49,
    70,
    50,
    108,
    54,
    105,
    66,
    50,
    97,
    103,
    100,
    87,
    108,
    54,
    74,
    47,
    52,
    76,
    114,
    120,
    55,
    88,
    103,
    48,
    109,
    68,
    112,
    118,
    74,
    109,
    73,
    90,
    98,
    109,
    68,
    71,
    71,
    114,
    57,
    122,
    65,
    121,
    43,
    80,
    121,
    88,
    84,
    68,
    112,
    99,
    97,
    56,
    88,
    119,
    69,
    80,
    68,
    79,
    67,
    98,
    79,
    97,
    111,
    115,
    68,
    71,
    111,
    102,
    113,
    118,
    65,
    99,
    102,
    73,
    108,
    67,
    83,
    112,
    104,
    53,
    109,
    53,
    54,
    118,
    119,
    108,
    73,
    102,
    110,
    56,
    81,
    68,
    54,
    72,
    102,
    76,
    115,
    85,
    67,
    117,
    71,
    56,
    88,
    81,
    90,
    70,
    49,
    51,
    98,
    99,
    51,
    114,
    107,
    65,
    112,
    49,
    65,
    101,
    80,
    120,
    47,
    49,
    55,
    72,
    83,
    65,
    49,
    111,
    77,
    76,
    121,
    119,
    100,
    109,
    81,
    120,
    54,
    106,
    88,
    89,
    53,
    103,
    43,
    51,
    105,
    66,
    86,
    99,
    115,
    107,
    66,
    101,
    80,
    99,
    88,
    97,
    76,
    52,
    74,
    100,
    52,
    70,
    101,
    83,
    85,
    83,
    113,
    68,
    54,
    51,
    122,
    86,
    117,
    86,
    83,
    117,
    111,
    104,
    51,
    81,
    74,
    108,
    85,
    48,
    122,
    79,
    89,
    121,
    114,
    102,
    90,
    76,
    43,
    102,
    51,
    76,
    116,
    53,
    86,
    103,
    85,
    103,
    76,
    71,
    48,
    115,
    105,
    56,
    79,
    118,
    111,
    68,
    88,
    65,
    122,
    80,
    110,
    57,
    112,
    117,
    52,
    88,
    82,
    82,
    111,
    76,
    66,
    75,
    74,
    113,
    103,
    66,
    50,
    54,
    76,
    80,
    87,
    85,
    48,
    88,
    73,
    47,
    118,
    118,
    49,
    49,
    76,
    56,
    101,
    88,
    82,
    69,
    110,
    99,
    103,
    52,
    54,
    90,
    53,
    65,
    85,
    98,
    115,
    50,
    118,
    71,
    74,
    49,
    115,
    81,
    77,
    110,
    67,
    113,
    85,
    66,
    65,
    101,
    80,
    120,
    47,
    49,
    52,
    68,
    105,
    80,
    115,
    101,
    103,
    118,
    56,
    54,
    67,
    72,
    101,
    79,
    84,
    97,
    77,
    103,
    56,
    112,
    55,
    100,
    119,
    122,
    68,
    68,
    83,
    79,
    102,
    68,
    109,
    76,
    88,
    121,
    99,
    106,
    116,
    71,
    113,
    90,
    75,
    77,
    121,
    116,
    88,
    85,
    88,
    105,
    87,
    99,
    66,
    115,
    51,
    109,
    116,
    78,
    105,
    48,
    114,
    120,
    52,
    68,
    52,
    121,
    81,
    105,
    104,
    109,
    80,
    81,
    67,
    108,
    66,
    102,
    84,
    107,
    112,
    80,
    120,
    52,
    112,
    84,
    57,
    43,
    119,
    71,
    105,
    56,
    54,
    78,
    102,
    57,
    55,
    67,
    67,
    75,
    65,
    68,
    119,
    73,
    102,
    68,
    80,
    74,
    66,
    81,
    70,
    52,
    76,
    84,
    85,
    118,
    65,
    50,
    52,
    118,
    49,
    97,
    121,
    57,
    82,
    69,
    112,
    100,
    97,
    73,
    50,
    50,
    106,
    97,
    100,
    99,
    72,
    108,
    69,
    50,
    115,
    84,
    118,
    68,
    50,
    56,
    105,
    109,
    54,
    51,
    72,
    115,
    81,
    53,
    118,
    109,
    111,
    86,
    48,
    89,
    89,
    76,
    105,
    97,
    106,
    56,
    50,
    106,
    100,
    53,
    50,
    118,
    121,
    89,
    76,
    75,
    68,
    122,
    98,
    55,
    43,
    76,
    103,
    107,
    87,
    108,
    50,
    86,
    52,
    85,
    104,
    74,
    66,
    72,
    121,
    84,
    70,
    107,
    43,
    119,
    77,
    103,
    107,
    80,
    105,
    82,
    117,
    102,
    116,
    112,
    103,
    65,
    107,
    106,
    68,
    108,
    109,
    117,
    67,
    107,
    103,
    66,
    52,
    47,
    72,
    47,
    88,
    116,
    75,
    82,
    43,
    114,
    74,
    114,
    98,
    114,
    84,
    80,
    114,
    75,
    65,
    100,
    97,
    68,
    116,
    115,
    56,
    77,
    49,
    87,
    122,
    71,
    69,
    112,
    115,
    99,
    117,
    99,
    110,
    89,
    70,
    112,
    101,
    113,
    73,
    79,
    107,
    81,
    55,
    71,
    101,
    97,
    100,
    117,
    107,
    87,
    81,
    101,
    99,
    53,
    71,
    66,
    115,
    74,
    86,
    84,
    81,
    54,
    114,
    115,
    109,
    97,
    82,
    122,
    112,
    54,
    110,
    52,
    50,
    66,
    65,
    108,
    114,
    76,
    109,
    111,
    73,
    85,
    73,
    97,
    99,
    77,
    116,
    50,
    102,
    69,
    56,
    61,
    34,
    125,
    93,
    125,
    44,
    34,
    102,
    105,
    110,
    105,
    115,
    104,
    82,
    101,
    97,
    115,
    111,
    110,
    34,
    58,
    32,
    34,
    83,
    84,
    79,
    80,
    34,
    125,
    93,
    44,
    34,
    117,
    115,
    97,
    103,
    101,
    77,
    101,
    116,
    97,
    100,
    97,
    116,
    97,
    34,
    58,
    32,
    123,
    34,
    112,
    114,
    111,
    109,
    112,
    116,
    84,
    111,
    107,
    101,
    110,
    67,
    111,
    117,
    110,
    116,
    34,
    58,
    32,
    55,
    57,
    44,
    34,
    99,
    97,
    110,
    100,
    105,
    100,
    97,
    116,
    101,
    115,
    84,
    111,
    107,
    101,
    110,
    67,
    111,
    117,
    110,
    116,
    34,
    58,
    32,
    49,
    56,
    44,
    34,
    116,
    111,
    116,
    97,
    108,
    84,
    111,
    107,
    101,
    110,
    67,
    111,
    117,
    110,
    116,
    34,
    58,
    32,
    50,
    54,
    55,
    44,
    34,
    116,
    114,
    97,
    102,
    102,
    105,
    99,
    84,
    121,
    112,
    101,
    34,
    58,
    32,
    34,
    79,
    78,
    95,
    68,
    69,
    77,
    65,
    78,
    68,
    34,
    44,
    34,
    112,
    114,
    111,
    109,
    112,
    116,
    84,
    111,
    107,
    101,
    110,
    115,
    68,
    101,
    116,
    97,
    105,
    108,
    115,
    34,
    58,
    32,
    91,
    123,
    34,
    109,
    111,
    100,
    97,
    108,
    105,
    116,
    121,
    34,
    58,
    32,
    34,
    84,
    69,
    88,
    84,
    34,
    44,
    34,
    116,
    111,
    107,
    101,
    110,
    67,
    111,
    117,
    110,
    116,
    34,
    58,
    32,
    55,
    57,
    125,
    93,
    44,
    34,
    99,
    97,
    110,
    100,
    105,
    100,
    97,
    116,
    101,
    115,
    84,
    111,
    107,
    101,
    110,
    115,
    68,
    101,
    116,
    97,
    105,
    108,
    115,
    34,
    58,
    32,
    91,
    123,
    34,
    109,
    111,
    100,
    97,
    108,
    105,
    116,
    121,
    34,
    58,
    32,
    34,
    84,
    69,
    88,
    84,
    34,
    44,
    34,
    116,
    111,
    107,
    101,
    110,
    67,
    111,
    117,
    110,
    116,
    34,
    58,
    32,
    49,
    56,
    125,
    93,
    44,
    34,
    116,
    104,
    111,
    117,
    103,
    104,
    116,
    115,
    84,
    111,
    107,
    101,
    110,
    67,
    111,
    117,
    110,
    116,
    34,
    58,
    32,
    49,
    55,
    48,
    125,
    44,
    34,
    109,
    111,
    100,
    101,
    108,
    86,
    101,
    114,
    115,
    105,
    111,
    110,
    34,
    58,
    32,
    34,
    103,
    101,
    109,
    105,
    110,
    105,
    45,
    50,
    46,
    53,
    45,
    102,
    108,
    97,
    115,
    104,
    34,
    44,
    34,
    99,
    114,
    101,
    97,
    116,
    101,
    84,
    105,
    109,
    101,
    34,
    58,
    32,
    34,
    50,
    48,
    50,
    53,
    45,
    49,
    49,
    45,
    48,
    52,
    84,
    49,
    54,
    58,
    48,
    48,
    58,
    48,
    57,
    46,
    49,
    56,
    51,
    53,
    48,
    57,
    90,
    34,
    44,
    34,
    114,
    101,
    115,
    112,
    111,
    110,
    115,
    101,
    73,
    100,
    34,
    58,
    32,
    34,
    67,
    83,
    77,
    75,
    97,
    100,
    87,
    90,
    67,
    55,
    71,
    51,
    54,
    77,
    69,
    80,
    49,
    89,
    102,
    108,
    45,
    65,
    103,
    34,
    125,
    13,
    10,
    13,
    10,
  ],
]
`;

exports[`google > google-vertex/stream > span 1`] = `
[
  {
    "attributes": {
      "gen_ai.operation.name": "chat",
      "gen_ai.response.model": "gemini-2.5-flash",
      "gen_ai.system": "google-vertex",
      "gen_ai.usage.input_tokens": 79,
      "gen_ai.usage.output_tokens": 188,
      "http.request.header.accept": "*/*",
      "http.request.header.accept-encoding": "deflate",
      "http.request.header.authorization": "healthy",
      "http.request.header.content-length": "830",
      "http.request.header.content-type": "application/json",
      "http.request.header.traceparent": "00-019a4effa21047ac31372f093cb8e712-8b60768281864a49-01",
      "http.request.header.user-agent": "pydantic-ai/1.0.19.dev5+b3b34f9, google-genai-sdk/1.36.0 gl-python/3.13.0 via Pydantic AI Gateway unknown, contact engineering@pydantic.dev",
      "http.request.header.x-goog-api-client": "google-genai-sdk/1.36.0 gl-python/3.13.0",
      "http.request.header.x-goog-api-key": "unset",
      "http.request.header.x-vcr-filename": "stream",
      "http.request.method": "POST",
      "http.response.header.content-type": "text/event-stream",
      "http.response.header.server": "uvicorn",
      "http.response.header.transfer-encoding": "chunked",
      "http.response.status_code": 200,
      "logfire.json_schema": "{"type":"object","properties":{"gen_ai.system":{"type":"string"},"gen_ai.operation.name":{"type":"string"},"gen_ai.response.model":{"type":"string"},"gen_ai.usage.input_tokens":{"type":"number"},"gen_ai.usage.output_tokens":{"type":"number"},"http.request.method":{"type":"string"},"url.full":{"type":"string"},"http.request.header.accept":{"type":"string"},"http.request.header.accept-encoding":{"type":"string"},"http.request.header.authorization":{"type":"string"},"http.request.header.content-length":{"type":"string"},"http.request.header.content-type":{"type":"string"},"http.request.header.traceparent":{"type":"string"},"http.request.header.user-agent":{"type":"string"},"http.request.header.x-goog-api-client":{"type":"string"},"http.request.header.x-goog-api-key":{"type":"string"},"http.request.header.x-vcr-filename":{"type":"string"},"http.response.status_code":{"type":"number"},"http.response.header.content-type":{"type":"string"},"http.response.header.server":{"type":"string"},"http.response.header.transfer-encoding":{"type":"string"}}}",
      "logfire.level_num": 9,
      "logfire.msg": "chat streaming",
      "url.full": "https://example.com/gemini/v1beta1/projects/pydantic-ai/locations/global/publishers/google/models/gemini-2.5-flash:streamGenerateContent?alt=sse",
    },
    "events": [],
    "kind": 1,
    "links": [],
    "name": "chat streaming",
    "parentSpanId": undefined,
    "resource": {
      "service.name": "PAIG",
      "service.version": "test",
    },
    "scope": "pydantic-ai-gateway",
    "status": {
      "code": 1,
    },
  },
]
`;
